--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
     "axios": "^1.5.1",
     "bcryptjs": "^2.4.3",
+    "haunted": "^5.0.0",
     "mongoose": "^7.6.1",
     "next": "13.4.9",
     "next-auth": "^4.23.2",
