--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "haunted": "^5.0.0",
     "mongoose": "^7.6.1",
     "next": "13.4.9",
-    "next-auth": "^4.23.2",
+    "next-auth": "4.22.1",
     "react": "^18",
     "react-dom": "^18"
   },
